exports[`use all parts of svg-edit > check tool_source_set #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        width="100"
        x="150"
        y="150"
      >
        <animate
          attributeName="opacity"
          begin="indefinite"
          dur="0.2"
          fill="freeze"
          to="1"
        ></animate>
      </rect>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_fhrect #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_1"
        stroke="#000000"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        opacity="0.5"
        stroke="#000000"
        width="120"
        x="350"
        y="230"
      >
        <animate
          attributeName="opacity"
          begin="indefinite"
          dur="0.2"
          fill="freeze"
          to="1"
        ></animate>
      </rect>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_square #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_1"
        stroke="#000000"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        stroke="#000000"
        width="120"
        x="350"
        y="230"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        opacity="0.5"
        stroke="#000000"
        width="50"
        x="225"
        y="300"
      >
        <animate
          attributeName="opacity"
          begin="indefinite"
          dur="0.2"
          fill="freeze"
          to="1"
        ></animate>
      </rect>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect_change_fill_color #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        height="50"
        id="svg_1"
        stroke="#000000"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        stroke="#000000"
        width="120"
        x="350"
        y="230"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect_change_rotation #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        height="50"
        id="svg_1"
        stroke="#000000"
        transform="rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        stroke="#000000"
        width="120"
        x="350"
        y="230"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect_change_blur #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        stroke="#000000"
        transform="rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        stroke="#000000"
        width="120"
        x="350"
        y="230"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect_change_opacity #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        stroke="#000000"
        width="120"
        x="350"
        y="230"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_fhrect_change_x_y_coordinate #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="100"
        id="svg_2"
        stroke="#000000"
        width="120"
        x="375"
        y="255"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_fhrect_change_width_height #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="125"
        id="svg_2"
        stroke="#000000"
        width="145"
        x="375"
        y="255"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_square_clone #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="125"
        id="svg_2"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="145"
        x="375"
        y="255"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        width="50"
        x="225"
        y="300"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_4"
        stroke="#000000"
        width="50"
        x="245"
        y="320"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_square_bring_to_back #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        width="50"
        x="225"
        y="300"
      ></rect>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="125"
        id="svg_2"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="145"
        x="375"
        y="255"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_4"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="245"
        y="320"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_square_bring_to_front #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="125"
        id="svg_2"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="145"
        x="375"
        y="255"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_4"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="245"
        y="320"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_square_change_corner_radius #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <rect
        fill="#FF0000"
        height="125"
        id="svg_2"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="145"
        x="375"
        y="255"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_4"
        rx="25"
        ry="25"
        stroke="#000000"
        width="50"
        x="245"
        y="320"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect_change_to_path #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <rect
        fill="#ffff00"
        filter="url(#svg_1_blur)"
        height="50"
        id="svg_1"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0) rotate(25 200 175)"
        width="100"
        x="150"
        y="150"
      ></rect>
      <path
        d="m375,255l145,0l0,125l-145,0l0,-125z"
        fill="#FF0000"
        id="svg_2"
        opacity="0.5"
        stroke="#000000"
      ></path>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_4"
        rx="25"
        ry="25"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="245"
        y="320"
      ></rect>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_3"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="225"
        y="300"
      ></rect>
    </g>
    <defs>
      <filter height="200%" id="svg_1_blur" width="200%" x="-50%" y="-50%">
        <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
      </filter>
    </defs>
  </svg>
</body>
`;

exports[`use all parts of svg-edit > check tool_rect_delete #0`] = `
<body>
  <svg
    width="640"
    height="480"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:svg="http://www.w3.org/2000/svg"
  >
    <g class="layer">
      <title>Layer 1</title>
      <path
        d="m375,255l145,0l0,125l-145,0l0,-125z"
        fill="#FF0000"
        id="svg_2"
        opacity="0.5"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
      ></path>
      <rect
        fill="#FF0000"
        height="50"
        id="svg_4"
        rx="25"
        ry="25"
        stroke="#000000"
        transform="matrix(1 0 0 1 0 0)"
        width="50"
        x="245"
        y="320"
      ></rect>
    </g>
  </svg>
</body>
`;
